# mfc-control

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  test_discovery.py
docs/: legacycode.txt
src/mfc_control/: __init__.py
src/mfc_control/cli/: __init__.py  diagnostics.py  main.py
src/mfc_control/combustion/: __init__.py  calculations.py  properties.py
src/mfc_control/core/: __init__.py  calibration.py  controller.py  mfc.py  safety.py
src/mfc_control/hardware/: __init__.py  connection.py  mock.py
tests/: __init__.py  test_calculations.py  test_calibration.py  test_mfc.py
